# tk3D

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-pose.txt  requirements-smpl.txt  requirements.txt  tk3d_architecture_deep_dive.md
config/: calibration_config.yaml  ground_truth_validation.yaml  model_config.yaml  scoring_config.yaml
docs/: mads_ground_truth_setup.md  rtmw_windows_setup.md  smpl_mesh_setup.md  vitpose_windows_setup.md
scripts/: analyze_pose_for_scoring.py  calibrate_cameras.py  calibrate_mads_vitpose_offsets.py  check_models.py  evaluate_ground_truth_3d.py  export_aist_smpl_threejs_viewer.py  import_aist_cameras.py  inspect_session.py  preflight_session.py  preview_camera_pair.py  probe_videos.py  render_aist_smpl_mesh.py  run_multiview_3d.py  run_pose2d_overlays.py  run_rtmw_multiview_3d.py  run_vitpose_multiview_3d.py  setup_aist_test.py  setup_mads_test.py  train_mads_vitpose_adapter.py  view_aist_smpl_mesh_open3d.py
src/: __init__.py  aist_calibration.py  artifacts.py  biomechanics_3d.py  camera_calibration.py  config_validation.py  coordinate_system.py  data_structures.py  exporter.py  ground_truth_io.py  ground_truth_validation.py  mads_dataset.py  mmpose_compat.py  model_runtime.py  multiview_sync.py  person_tracking.py  pose2d_estimator.py  pose2d_sequence.py  pose3d_estimator.py  pose_reliability.py  pose_temporal.py  preflight.py  progress.py  run_outputs.py  scoring_engine.py  scoring_readiness.py  (+10 more)
tools/xtcocotools_compat/: pyproject.toml
tools/xtcocotools_compat/xtcocotools/: __init__.py  coco.py  cocoeval.py
(+29 files in other folders)
