[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tk3d"
version = "0.1.0"
description = "Calibration-first multi-view 3D pose pipeline for taekwondo poomsae analysis."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "PyYAML>=6.0",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "matplotlib>=3.8",
  "scipy>=1.12",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]
smpl = ["smplx>=0.1.28", "trimesh>=4.0"]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

