[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xtcocotools"
version = "1.14.3"
description = "TK3D compatibility shim that maps xtcocotools imports to pycocotools."
requires-python = ">=3.10"
dependencies = ["pycocotools>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["xtcocotools*"]
